<resources>
    <string name="app_name">QBITS</string>
    <string name="contact_us1">Phone - (374)10-34-56-78</string>
    <string name="contact_us2">Phone - (374)77-44-56-78</string>
    <string name="contact_us3">Email - qbits@gmail.com</string>
    <string name="registration">Registration</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="about_us">About us</string>
    <string name="map_key">AIzaSyA16JQgJ3kU9WKHpD6NhmmALdS8bwdx_Wo</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="open">open</string>
    <string name="text_accounts">Բոլոր օգտատերերը</string>
    <string name="hint_name">Անուն Ազգանուն</string>
    <string name="hint_email">Էլ-փոստ</string>
    <string name="hint_password">Գաղտնաբառ</string>
    <string name="hint_confirm_password">Կրկնել գաղտնաբառը</string>
    <string name="text_login">Մուտք գործել</string>
    <string name="text_register">Գրանցվել</string>
    <string name="error_message_name">Լրացնել անուն/ազգանուն</string>
    <string name="error_message_email">Էլ-փոտս գոյություն չունի</string>
    <string name="error_message_noemail">Գրել էլ-փոստ</string>
    <string name="error_message_nopassword">Հավաքել գաղտնաբառը</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">Ստեղծել նոր հաշիվ</string>
    <string name="text_already_member">Մուտք գործել իմ հաշիվ</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Գաղտնաբառը կիսատ է</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Բարի Գալուստ,</string>
    <string name="about">Քաղաքում բարեկարգում իրականացնող աշխատանքների ինտերակտիվ վերահսկում իրականացնող ծրագրային
        հավելված:
    </string>
    <string name="mutq">Բարի Գալուստ քաղաքում բարեկարգում իրականացնող աշխատանքների ինտերակտիվ վերահսկում իրականացնող
        ծրագրային հավելված
    </string>
    <string name="close">close</string>
    <string name="sanitek">«Sanitek s.a.r.l» ընկերությունը աղբահանության և սանմաքրման գործառույթներ է իրականացնում քաղաք
        Երևանի
        բոլոր վարչական շրջաններում:
    </string>
    <string name="qaxaq">Երևանի ավագանին ընդունեց «Երևանի աղբահանություն և սանիտարական մաքրում» համայնքային հիմնարկ
        ստեղծելու մասին որոշումը:«Արմենպրես»-ի փոխանցմամբ՝ հիմնարկի գործունեության հիմնական նպատակը Երևանի վարչական
        տարածքի աղբահանության և սանիտարական մաքրման (ներառյալ՝ ձմեռային ամիսներին) աշխատանքների իրականացման ապահովումն
        է:
    </string>
    <string name="sms">Հարգելի օգտատեր՝
        Յուրաքանչյուր աշխատանք կկատարվի 8 աշխատանքային օրվա ընթացքում,հաշված Ձեր ուղարկման պահից։
        Շնորհակալություն
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
